# pulse_bogota

./: .claudeignore  .dockerignore  .env.example  .gitignore  .graphifyignore  CLAUDE.md  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml
app/: __init__.py  api.py  collectors.py  core.py  database.py  engine.py  main.py  scheduler.py  schemas.py  services.py
app/api/: activity.py  anomaly.py  collectors.py  discover.py  engine.py  feedback.py  forecast.py  health.py  history.py  importer.py  places.py  query.py  top.py
app/collectors/: air.py  events.py  google.py  osm.py  traffic.py  weather.py
app/core/: config.py  logging.py
app/database/: database.py  migrate.py  models.py  seed.py
app/database/migrations/: env.py
app/engine/: forecast.py  score.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial_schema.py  0002_add_event_raw_signals.py  0003_add_feedback.py  0004_add_air_quality_signals.py
app/scheduler/: jobs.py
app/schemas/: activity.py  anomaly.py  discovery.py  feedback.py  forecast.py  history.py  importer.py  place.py
app/services/: anomaly.py  discovery.py  feedback.py  forecast.py  importer.py  places.py  scoring.py
infra/: README.md  backup.sh  compose.yaml  deploy.sh  pulse-backup.service  pulse-backup.timer  pulse-deploy.service  pulse-deploy.timer  restore.sh
tests/: conftest.py  test_anomaly.py  test_collectors.py  test_discovery.py  test_engine.py  test_feedback.py  test_forecast.py  test_importer.py  test_logging.py  test_places.py  test_scoring.py
