[project]
name = "pulse-bogota"
version = "0.1.1"
description = "Activity & discovery scoring API for places in Bogotá"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "holidays>=0.57",
    "httpx>=0.27",
    "joblib>=1.4",
    "numpy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "scikit-learn>=1.5",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "black>=24.10",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.uv]
# This is an application, not a library — manage deps only, don't build/install it.
package = false

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses Depends()/Query() as argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
# App isn't installed as a package (tool.uv.package = false), so put the project
# root on sys.path for `uv run pytest` / `pytest` (matches `python -m pytest`).
pythonpath = ["."]
